vendor/boringssl/include/openssl/ssl.h


struct timeval;
OPENSSL_EXPORT const SSL_METHOD *TLS_method(void);
OPENSSL_EXPORT const SSL_METHOD *DTLS_method(void);
OPENSSL_EXPORT const SSL_METHOD *TLS_with_buffers_method(void);
OPENSSL_EXPORT const SSL_METHOD *DTLS_with_buffers_method(void);
OPENSSL_EXPORT SSL_CTX *SSL_CTX_new(const SSL_METHOD *method);
OPENSSL_EXPORT int SSL_CTX_up_ref(SSL_CTX *ctx);
OPENSSL_EXPORT void SSL_CTX_free(SSL_CTX *ctx);
OPENSSL_EXPORT SSL *SSL_new(SSL_CTX *ctx);
OPENSSL_EXPORT void SSL_free(SSL *ssl);
OPENSSL_EXPORT SSL_CTX *SSL_get_SSL_CTX(const SSL *ssl);
OPENSSL_EXPORT void SSL_set_connect_state(SSL *ssl);
OPENSSL_EXPORT void SSL_set_accept_state(SSL *ssl);
OPENSSL_EXPORT int SSL_is_server(const SSL *ssl);
OPENSSL_EXPORT int SSL_is_dtls(const SSL *ssl);
OPENSSL_EXPORT int SSL_is_quic(const SSL *ssl);
OPENSSL_EXPORT void SSL_set_bio(SSL *ssl, BIO *rbio, BIO *wbio);
OPENSSL_EXPORT void SSL_set0_rbio(SSL *ssl, BIO *rbio);
OPENSSL_EXPORT void SSL_set0_wbio(SSL *ssl, BIO *wbio);
OPENSSL_EXPORT BIO *SSL_get_rbio(const SSL *ssl);
OPENSSL_EXPORT BIO *SSL_get_wbio(const SSL *ssl);
OPENSSL_EXPORT int SSL_get_fd(const SSL *ssl);
OPENSSL_EXPORT int SSL_get_rfd(const SSL *ssl);
OPENSSL_EXPORT int SSL_get_wfd(const SSL *ssl);
OPENSSL_EXPORT int SSL_set_fd(SSL *ssl, int fd);
OPENSSL_EXPORT int SSL_set_rfd(SSL *ssl, int fd);
OPENSSL_EXPORT int SSL_set_wfd(SSL *ssl, int fd);
OPENSSL_EXPORT int SSL_do_handshake(SSL *ssl);
OPENSSL_EXPORT int SSL_connect(SSL *ssl);
OPENSSL_EXPORT int SSL_accept(SSL *ssl);
OPENSSL_EXPORT int SSL_read(SSL *ssl, void *buf, int num);
OPENSSL_EXPORT int SSL_peek(SSL *ssl, void *buf, int num);
OPENSSL_EXPORT int SSL_pending(const SSL *ssl);
OPENSSL_EXPORT int SSL_has_pending(const SSL *ssl);
OPENSSL_EXPORT int SSL_get_error(const SSL *ssl, int ret_code);
OPENSSL_EXPORT int DTLSv1_get_timeout(const SSL *ssl, struct timeval *out);
OPENSSL_EXPORT int DTLSv1_handle_timeout(SSL *ssl);
OPENSSL_EXPORT void SSL_CTX_set_cert_cb(SSL_CTX *ctx,
                                        int (*cb)(SSL *ssl, void *arg),
                                        void *arg);
OPENSSL_EXPORT void SSL_set_cert_cb(SSL *ssl, int (*cb)(SSL *ssl, void *arg),
                                    void *arg);
OPENSSL_EXPORT int SSL_CTX_set_tlsext_ticket_key_cb(
    SSL_CTX *ctx,
    int (*callback)(SSL *ssl, uint8_t *key_name, uint8_t *iv,
                    EVP_CIPHER_CTX *ctx, HMAC_CTX *hmac_ctx, int encrypt));
OPENSSL_EXPORT void SSL_CTX_set_verify(
    SSL_CTX *ctx, int mode, int (*callback)(int ok, X509_STORE_CTX *store_ctx));
OPENSSL_EXPORT void SSL_set_verify(SSL *ssl, int mode,
                                   int (*callback)(int ok,
                                                   X509_STORE_CTX *store_ctx));
OPENSSL_EXPORT void SSL_CTX_set_custom_verify(
    SSL_CTX *ctx, int mode,
    enum ssl_verify_result_t (*callback)(SSL *ssl, uint8_t *out_alert));
OPENSSL_EXPORT void SSL_set_custom_verify(
    SSL *ssl, int mode,
    enum ssl_verify_result_t (*callback)(SSL *ssl, uint8_t *out_alert));
OPENSSL_EXPORT int (*SSL_CTX_get_verify_callback(const SSL_CTX *ctx))(
    int ok, X509_STORE_CTX *store_ctx);
OPENSSL_EXPORT int (*SSL_get_verify_callback(const SSL *ssl))(
    int ok, X509_STORE_CTX *store_ctx);
OPENSSL_EXPORT void SSL_CTX_set_cert_verify_callback(
    SSL_CTX *ctx, int (*callback)(X509_STORE_CTX *store_ctx, void *arg),
    void *arg);
OPENSSL_EXPORT int SSL_CTX_set_tlsext_servername_callback(
    SSL_CTX *ctx, int (*callback)(SSL *ssl, int *out_alert, void *arg));
OPENSSL_EXPORT SSL_CTX *SSL_set_SSL_CTX(SSL *ssl, SSL_CTX *ctx);
OPENSSL_EXPORT void SSL_CTX_set_alpn_select_cb(
    SSL_CTX *ctx,
    int (*cb)(SSL *ssl, const uint8_t **out, uint8_t *out_len,
              const uint8_t *in, unsigned in_len, void *arg),
    void *arg);
OPENSSL_EXPORT void SSL_CTX_set_next_protos_advertised_cb(
    SSL_CTX *ctx,
    int (*cb)(SSL *ssl, const uint8_t **out, unsigned *out_len, void *arg),
    void *arg);
OPENSSL_EXPORT void SSL_CTX_set_next_proto_select_cb(
    SSL_CTX *ctx,
    int (*cb)(SSL *ssl, uint8_t **out, uint8_t *out_len, const uint8_t *in,
              unsigned in_len, void *arg),
    void *arg);
OPENSSL_EXPORT void SSL_CTX_set_dos_protection_cb(
    SSL_CTX *ctx, int (*cb)(const SSL_CLIENT_HELLO *));
OPENSSL_EXPORT void SSL_CTX_set_client_cert_cb(
    SSL_CTX *ctx, int (*cb)(SSL *ssl, X509 **out_x509, EVP_PKEY **out_pkey));
OPENSSL_EXPORT int SSL_CTX_set_tlsext_status_cb(SSL_CTX *ctx,
                                                int (*callback)(SSL *ssl,
                                                                void *arg));
#define DTLSv1_get_timeout DTLSv1_get_timeout
#define DTLSv1_handle_timeout DTLSv1_handle_timeout