vendor/bifrost/tls/bindings/ssl.odin

// Copyright 1995-2016 The OpenSSL Project Authors. All Rights Reserved.
// Copyright (c) 2002, Oracle and/or its affiliates. All rights reserved.
// Copyright 2005 Nokia. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
package bifrost_tls_bindings
foreign import lib {
	LIBSSL_PATH,
	LIBCRYPTO_PATH,
	"system:stdc++",
	"system:gcc_s",
}

import "core:c"


// Intentionally empty. Linking is handled in link.odin to avoid duplicate
// declarations across generated binding files.


// Forward-declare struct timeval. On Windows, it is defined in winsock2.h and
// Windows headers define too many macros to be included in public headers.
// However, only a forward declaration is needed.
timeval :: struct {
	// Copyright (c) 2002, Oracle and/or its affiliates. All rights reserved.
	// Copyright 2005 Nokia. All rights reserved.
	//
	// Licensed under the Apache License, Version 2.0 (the "License");
	tv_sec: __time_t,

	// Copyright (c) 2002, Oracle and/or its affiliates. All rights reserved.
	// Copyright 2005 Nokia. All rights reserved.
	//
	// Licensed under the Apache License, Version 2.0 (the "License");
	// you may not use this file except in compliance with the License.
	tv_usec: __suseconds_t,
}

@(default_calling_convention="c")
foreign lib {
	// TLS_method is the |SSL_METHOD| used for TLS connections.
	TLS_method :: proc() -> ^SSL_METHOD ---

	// DTLS_method is the |SSL_METHOD| used for DTLS connections.
	DTLS_method :: proc() -> ^SSL_METHOD ---

	// TLS_with_buffers_method is like |TLS_method|, but avoids all use of
	// crypto/x509. All client connections created with |TLS_with_buffers_method|
	// will fail unless a certificate verifier is installed with
	// |SSL_set_custom_verify| or |SSL_CTX_set_custom_verify|.
	TLS_with_buffers_method :: proc() -> ^SSL_METHOD ---

	// DTLS_with_buffers_method is like |DTLS_method|, but avoids all use of
	// crypto/x509.
	DTLS_with_buffers_method :: proc() -> ^SSL_METHOD ---

	// SSL_CTX_new returns a newly-allocated |SSL_CTX| with default settings or NULL
	// on error.
	SSL_CTX_new :: proc(method: ^SSL_METHOD) -> ^SSL_CTX ---

	// SSL_CTX_up_ref increments the reference count of |ctx|. It returns one.
	SSL_CTX_up_ref :: proc(ctx: ^SSL_CTX) -> i32 ---

	// SSL_CTX_free releases memory associated with |ctx|.
	SSL_CTX_free :: proc(ctx: ^SSL_CTX) ---

	// SSL_new returns a newly-allocated |SSL| using |ctx| or NULL on error. The new
	// connection inherits settings from |ctx| at the time of creation. Settings may
	// also be individually configured on the connection.
	//
	// On creation, an |SSL| is not configured to be either a client or server. Call
	// |SSL_set_connect_state| or |SSL_set_accept_state| to set this.
	SSL_new :: proc(ctx: ^SSL_CTX) -> ^SSL ---

	// SSL_free releases memory associated with |ssl|.
	SSL_free :: proc(ssl: ^SSL) ---

	// SSL_get_SSL_CTX returns the |SSL_CTX| associated with |ssl|. If
	// |SSL_set_SSL_CTX| is called, it returns the new |SSL_CTX|, not the initial
	// one.
	SSL_get_SSL_CTX :: proc(ssl: ^SSL) -> ^SSL_CTX ---

	// SSL_set_connect_state configures |ssl| to be a client.
	SSL_set_connect_state :: proc(ssl: ^SSL) ---

	// SSL_set_accept_state configures |ssl| to be a server.
	SSL_set_accept_state :: proc(ssl: ^SSL) ---

	// SSL_is_server returns one if |ssl| is configured as a server and zero
	// otherwise.
	SSL_is_server :: proc(ssl: ^SSL) -> i32 ---

	// SSL_is_dtls returns one if |ssl| is a DTLS connection and zero otherwise.
	SSL_is_dtls :: proc(ssl: ^SSL) -> i32 ---

	// SSL_is_quic returns one if |ssl| is a QUIC connection and zero otherwise.
	SSL_is_quic :: proc(ssl: ^SSL) -> i32 ---

	// SSL_set_bio configures |ssl| to read from |rbio| and write to |wbio|. |ssl|
	// takes ownership of the two |BIO|s. If |rbio| and |wbio| are the same, |ssl|
	// only takes ownership of one reference. See |SSL_set0_rbio| and
	// |SSL_set0_wbio| for requirements on |rbio| and |wbio|, respectively.
	//
	// If |rbio| is the same as the currently configured |BIO| for reading, that
	// side is left untouched and is not freed.
	//
	// If |wbio| is the same as the currently configured |BIO| for writing AND |ssl|
	// is not currently configured to read from and write to the same |BIO|, that
	// side is left untouched and is not freed. This asymmetry is present for
	// historical reasons.
	//
	// Due to the very complex historical behavior of this function, calling this
	// function if |ssl| already has |BIO|s configured is deprecated. Prefer
	// |SSL_set0_rbio| and |SSL_set0_wbio| instead.
	SSL_set_bio :: proc(ssl: ^SSL, rbio: ^BIO, wbio: ^BIO) ---

	// SSL_set0_rbio configures |ssl| to read from |rbio|. It takes ownership of
	// |rbio|. |rbio| may be a custom |BIO|, in which case it must implement
	// |BIO_read| with |BIO_meth_set_read|. In DTLS, |rbio| must be non-blocking to
	// properly handle timeouts and retransmits.
	//
	// Note that, although this function and |SSL_set0_wbio| may be called on the
	// same |BIO|, each call takes a reference. Use |BIO_up_ref| to balance this.
	SSL_set0_rbio :: proc(ssl: ^SSL, rbio: ^BIO) ---

	// SSL_set0_wbio configures |ssl| to write to |wbio|. It takes ownership of
	// |wbio|. |wbio| may be a custom |BIO|, in which case it must implement
	// |BIO_write| with |BIO_meth_set_write|. It must additionally implement
	// |BIO_flush| with |BIO_meth_set_ctrl| and |BIO_CTRL_FLUSH|. If flushing is
	// unnecessary with |wbio|, |BIO_flush| should return one and do nothing.
	//
	// Note that, although this function and |SSL_set0_rbio| may be called on the
	// same |BIO|, each call takes a reference. Use |BIO_up_ref| to balance this.
	SSL_set0_wbio :: proc(ssl: ^SSL, wbio: ^BIO) ---

	// SSL_get_rbio returns the |BIO| that |ssl| reads from.
	SSL_get_rbio :: proc(ssl: ^SSL) -> ^BIO ---

	// SSL_get_wbio returns the |BIO| that |ssl| writes to.
	SSL_get_wbio :: proc(ssl: ^SSL) -> ^BIO ---

	// SSL_get_fd calls |SSL_get_rfd|.
	SSL_get_fd :: proc(ssl: ^SSL) -> i32 ---

	// SSL_get_rfd returns the file descriptor that |ssl| is configured to read
	// from. If |ssl|'s read |BIO| is not configured or doesn't wrap a file
	// descriptor then it returns -1.
	//
	// Note: On Windows, this may return either a file descriptor or a socket (cast
	// to int), depending on whether |ssl| was configured with a file descriptor or
	// socket |BIO|.
	SSL_get_rfd :: proc(ssl: ^SSL) -> i32 ---

	// SSL_get_wfd returns the file descriptor that |ssl| is configured to write
	// to. If |ssl|'s write |BIO| is not configured or doesn't wrap a file
	// descriptor then it returns -1.
	//
	// Note: On Windows, this may return either a file descriptor or a socket (cast
	// to int), depending on whether |ssl| was configured with a file descriptor or
	// socket |BIO|.
	SSL_get_wfd :: proc(ssl: ^SSL) -> i32 ---

	// SSL_set_fd configures |ssl| to read from and write to |fd|. It returns one
	// on success and zero on allocation error. The caller retains ownership of
	// |fd|.
	//
	// On Windows, |fd| is cast to a |SOCKET| and used with Winsock APIs.
	SSL_set_fd :: proc(ssl: ^SSL, fd: i32) -> i32 ---

	// SSL_set_rfd configures |ssl| to read from |fd|. It returns one on success and
	// zero on allocation error. The caller retains ownership of |fd|.
	//
	// On Windows, |fd| is cast to a |SOCKET| and used with Winsock APIs.
	SSL_set_rfd :: proc(ssl: ^SSL, fd: i32) -> i32 ---

	// SSL_set_wfd configures |ssl| to write to |fd|. It returns one on success and
	// zero on allocation error. The caller retains ownership of |fd|.
	//
	// On Windows, |fd| is cast to a |SOCKET| and used with Winsock APIs.
	SSL_set_wfd :: proc(ssl: ^SSL, fd: i32) -> i32 ---

	// SSL_do_handshake continues the current handshake. If there is none or the
	// handshake has completed or False Started, it returns one. Otherwise, it
	// returns <= 0. The caller should pass the value into |SSL_get_error| to
	// determine how to proceed.
	//
	// In DTLS, the caller must drive retransmissions and timeouts. After calling
	// this function, the caller must use |DTLSv1_get_timeout| to determine the
	// current timeout, if any. If it expires before the application next calls into
	// |ssl|, call |DTLSv1_handle_timeout|. Note that DTLS handshake retransmissions
	// use fresh sequence numbers, so it is not sufficient to replay packets at the
	// transport.
	//
	// After the DTLS handshake, some retransmissions may remain. If |ssl| wrote
	// last in the handshake, it may need to retransmit the final flight in case of
	// packet loss. Additionally, in DTLS 1.3, it may need to retransmit
	// post-handshake messages. To handle these, the caller must always be prepared
	// to receive packets and process them with |SSL_read|, even when the
	// application protocol would otherwise not read from the connection.
	//
	// TODO(davidben): Ensure 0 is only returned on transport EOF.
	// https://crbug.com/466303.
	SSL_do_handshake :: proc(ssl: ^SSL) -> i32 ---

	// SSL_connect configures |ssl| as a client, if unconfigured, and calls
	// |SSL_do_handshake|.
	SSL_connect :: proc(ssl: ^SSL) -> i32 ---

	// SSL_accept configures |ssl| as a server, if unconfigured, and calls
	// |SSL_do_handshake|.
	SSL_accept :: proc(ssl: ^SSL) -> i32 ---

	// SSL_read reads up to |num| bytes from |ssl| into |buf|. It implicitly runs
	// any pending handshakes, including renegotiations when enabled. On success, it
	// returns the number of bytes read. Otherwise, it returns <= 0. The caller
	// should pass the value into |SSL_get_error| to determine how to proceed.
	//
	// In DTLS 1.3, the caller must also drive timeouts from retransmitting the
	// final flight of the handshake, as well as post-handshake messages. After
	// calling this function, the caller must use |DTLSv1_get_timeout| to determine
	// the current timeout, if any. If it expires before the application next calls
	// into |ssl|, call |DTLSv1_handle_timeout|.
	//
	// TODO(davidben): Ensure 0 is only returned on transport EOF.
	// https://crbug.com/466303.
	SSL_read :: proc(ssl: ^SSL, buf: rawptr, num: i32) -> i32 ---

	// SSL_peek behaves like |SSL_read| but does not consume any bytes returned.
	SSL_peek :: proc(ssl: ^SSL, buf: rawptr, num: i32) -> i32 ---

	// SSL_pending returns the number of buffered, decrypted bytes available for
	// read in |ssl|. It does not read from the transport.
	//
	// In DTLS, it is possible for this function to return zero while there is
	// buffered, undecrypted data from the transport in |ssl|. For example,
	// |SSL_read| may read a datagram with two records, decrypt the first, and leave
	// the second buffered for a subsequent call to |SSL_read|. Callers that wish to
	// detect this case can use |SSL_has_pending|.
	SSL_pending :: proc(ssl: ^SSL) -> i32 ---
